# roboluke-tasks

./: .coveragerc  .env.default  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yaml  docker-compose.yml  pyproject.toml  renovate.json  requirements-dev.txt  requirements.txt  sonar-project.properties  test.sh
.archive/: requirements.txt
.archive/.github/: CODEOWNERS
.archive/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.archive/.github/workflows/: ci.yml  release.yml
.archive/.github/workflows-old/: release.yml
.gitea/: CODEOWNERS
.gitea/workflows/: build_docker.yml  ci.yml  conventional_commit.yml  pr-title-semantic.yml  release.yml  snyk.yml
.gitea/workflows-disabled/: release.yml
.github/: dependabot.yml  renovate.json
.github/workflows/: ci.yml  create_release.yml  docker.yml  docker_publish.yml  release.yml
app/: main.py
app/commands/: exit.py  submit_task.py
app/utils/: apm.py  config.py  datetime.py  helpers.py  n8n.py
tests/: test_config.py  test_config_1.py  test_config_2.py  test_datetime.py  test_helpers.py
