[project]
name = "roboluke-tasks"
version = "0.0.0"
description = "Add tasks to a Wekan to do list via Webex and n8n."
readme = "README.md"
authors = [
    {name = "Luke Tainton", email = "luke@tainton.uk"},
]
requires-python = "<4.0,>=3.11"
dependencies = [
    "webex-bot<1.1.0,>=1.0.3",
    "datetime<6.0,>=5.5",
    "requests<3.0.0,>=2.32.3",
]

[tool.uv]
dev-dependencies = [
    "black<25.9.1,>=25.9.0",
    "coverage<8.0.0,>=7.6.10",
    "isort<6.1.1,>=6.1.0",
    "pylint<4.0.0,>=3.3.3",
    "pylint-exit<2.0.0,>=1.2.0",
    "pytest<9.0.0,>=8.3.4",
    "zipp<4.0.0,>=3.21.0",
]

[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
